overlapping gizmos when switching modes. #66229

Closed
opened 2019-06-28 23:15:02 +02:00 by Zino Guerr · 8 comments

System Information
Windows 10 64 bits
GTX 1050 TI latest Driver

Blender Version
Broken: 2.80.74 hash:5762137f3522

Short description of error
transform gizmos overlap when they are set differently in each mode like object/edit Mode, Object/Pose Mode..etc

Exact steps for others to reproduce the error
*set move tool for object mode.
*set rotate tool for edit mode.
*go back to object mode.
*gimzos if you keep switching between modes the colours gets intense indicating more gizmos are drawn on top of each other.

**System Information** Windows 10 64 bits GTX 1050 TI latest Driver **Blender Version** Broken: 2.80.74 hash:5762137f3522 **Short description of error** transform gizmos overlap when they are set differently in each mode like object/edit Mode, Object/Pose Mode..etc **Exact steps for others to reproduce the error** *set move tool for object mode. *set rotate tool for edit mode. *go back to object mode. *gimzos if you keep switching between modes the colours gets intense indicating more gizmos are drawn on top of each other.
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-06-29 04:06:36 +02:00

Was fixed 83d92f55b8

Was fixed 83d92f55b8
Author

In #66229#709576, @ideasman42 wrote:
Was fixed 83d92f55b8

this is what i mean, it still stacking up gizmos on top of each others.gizmo.gif

> In #66229#709576, @ideasman42 wrote: > Was fixed 83d92f55b8 this is what i mean, it still stacking up gizmos on top of each others.![gizmo.gif](https://archive.blender.org/developer/F7555676/gizmo.gif)

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by fc10a5cf9e

This issue was referenced by fc10a5cf9e008343ecb925fdb87a4faa18918359

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#66229
No description provided.