Fix T66229: gizmos overlap when switching modes