source/blender/windowmanager/gizmo/intern/wm_gizmo_group.c
@@ -927,6 +927,15 @@ wmGizmoGroup *WM_gizmomaptype_group_init_runtime_with_region(wmGizmoMapType *gzm
 
   wmGizmoGroup *gzgroup = wm_gizmogroup_new_from_type(gzmap, gzgt);
 
+  /* Don't allow duplicates when switching modes for e.g. see: T66229. */
+  LISTBASE_FOREACH (wmGizmoGroup *, gzgroup_iter, &gzmap->groups) {
+    if (gzgroup_iter->type == gzgt) {
+      if (gzgroup_iter != gzgroup) {
+        WM_gizmo_group_tag_remove(gzgroup_iter);
+      }
+    }
+  }
+
   wm_gizmomap_highlight_set(gzmap, NULL, NULL, 0);
 
   ED_region_tag_redraw(ar);
